--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-
 <div class="container">
-    <router-outlet></router-outlet>
+  <div class="img-background"></div>
+
+  <router-outlet></router-outlet>
 </div>
